@@ -1,6 +1,10 @@
 ispCP ω 1.0.3 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2009-09-24 Laurent Declercq
+	- WEBMAIL:
+		* Integrating new theme for squirrelmail (Thank to Henriks)
+
 2009-09-23 Benedikt Heintel
 	- GUI:
 		* Fixed #2001: subdomain: hostname length need >= 2 chars
@@ -20,7 +24,7 @@ ispCP ω 1.0.3 Changelog
 	- GUI:
 		* Fixed #1989: Failed database updates are silently ignored
 		* Fixed #2000: Wrong default value for 'USER_INITAL_LANG' configuration variable
-			- Added an new db databaseUpdate (25) to fix the 'user_gui_props.lang' value ('lang_EnglishBritain' instead of 'lang_English')
+			- Added a new db databaseUpdate (25) to fix the 'user_gui_props.lang' value ('lang_EnglishBritain' instead of 'lang_English')
 		* Small fixes
 		* Uninitialized variable ($backup) in "client/hosting_plan_update.php"
 
